# ising-wasm

./: Cargo.toml  README.md  bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
ising_backend/: Cargo.toml
ising_backend/src/: lib.rs
src/: App.css  App.tsx
